ISP20230647 - Final Inspection的Measurement使用特別的AQL

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -750,7 +750,7 @@
                 var aql = $(this).val()
                 var TotalAvailableQty = $("#totalAvailableQty").text();
 
-                if (TotalAvailableQty == 0) {
+                if (TotalAvailableQty == 0 && $("#FinalInspectionID".val() != '')) {
                     msg.WithError("Total Available Qty cann't be 0.");
                     $(this).val('');
                     return;
