ISP20230882 - 調整Menu名稱以及錯誤修正

--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -385,7 +385,7 @@
                                                 Article = item.Article,
                                             });
                                             break;
-                                        case string a when a.Contains("Sticker Test"):
+                                        case string a when a.Contains("Residue/Ageing Test for Sticker"):
                                             link = Url.Action("IndexGet", "StickerTest", new
                                             {
                                                 ReportNo = item.ReportNo,
