--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -405,6 +405,16 @@
                                                 Article = item.Article,
                                             });
                                             break;
+                                        case string a when a.Contains("Evaporation Rate Test"):
+                                            link = Url.Action("IndexGet", "EvaporationRateTest", new
+                                            {
+                                                ReportNo = item.ReportNo,
+                                                BrandID = item.BrandID,
+                                                SeasonID = item.SeasonID,
+                                                StyleID = item.StyleID,
+                                                Article = item.Article,
+                                            });
+                                            break;
                                         default:
                                             link = "#";
                                             break;
@@ -657,10 +667,11 @@
             let includes_RandomTumble = currentType.toUpperCase().includes("RandomTumble");
             let includes_Absorbency = currentType.toUpperCase().includes("ABSORBENCY");
             let includes_StickerTest = currentType.toUpperCase().includes("SICKERTEST");
+            let includes_EvaporationRate = currentType.toUpperCase().includes("EVAPORATIONRATE");
 
 
             if (!includes_MOCKUP && !includes_HTWash && !includes_Moistureh && !includes_Aging && !includes_SALIVA && !includes_Hydrostatic
-                && !includes_Yellowing && !includes_Martindale && !includes_RandomTumble && !includes_Absorbency && !includes_StickerTest && includes_Absorbency) {
+                && !includes_Yellowing && !includes_Martindale && !includes_RandomTumble && !includes_Absorbency && !includes_StickerTest && includes_Absorbency && !includes_EvaporationRate) {
                 $(".mockupOnly").val('');
                 $(".mockupOnly").attr("disabled", "disabled");
             }
