ISP20230873 - 若不是使用Razor的方式顯示圖片，會有非Base 64字元出現的問題，因此改寫法

--- a/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
@@ -295,9 +295,9 @@
 
                                         <input type="hidden" id="Main_ReportNo" name="Main.ReportNo" value="@Model.Main.ReportNo">
                                         <input type="hidden" id="Main_Status" name="Main.Status" value="@Model.Main.Status">
-                                        <input type="hidden" id="Main_TestBeforePicture" name="Main.TestBeforePicture" value="@Model.Main.TestBeforePicture">
-                                        <input type="hidden" id="Main_TestAfterPicture" name="Main.TestAfterPicture" value="@Model.Main.TestAfterPicture">
                                         <input type="hidden" id="Main_MRHandleEmail" name="Main.MRHandleEmail" value="@Model.Main.MRHandleEmail">
+                                        @Html.HiddenFor(o => o.Main.TestBeforePicture)
+                                        @Html.HiddenFor(o => o.Main.TestAfterPicture)
                                     </td>
                                     <td style="width: 10vw;"><h5>SP#</h5></td>
                                     <td style="width: 20vw;">
