--- a/Quality/Quality/Areas/BulkFGT/Views/EvaporationRateTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/EvaporationRateTest/Index.cshtml
@@ -633,7 +633,7 @@
                             <h4 class="colTitle">Seq</h4>
                         </div>
                         <div class="MainAreaItem odd">
-                            @Html.TextBoxFor(o => o.Main.Seq, new { @class = "odd CanEdit" })
+                            @Html.TextBoxFor(o => o.Main.Seq, new { @class = "odd" })
                             @Html.HiddenFor(o => o.Main.Seq1, new { @class = "" })
                             @Html.HiddenFor(o => o.Main.Seq2, new { @class = "" })
 
