--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -294,19 +294,18 @@
                                     <td><h5>Test Item</h5></td>
                                     <td>
                                         @Html.DropDownListFor(o => o.Detail.TestItem, Model.TestItem_Source, null, new { @onchange = "TestItemChange(this)", @class = "OnlyEdit" })
-                                    </td>
-                                    <td>
-                                        <h5>
-                                            @Html.HiddenFor(o => o.Detail.PullForceUnit, new { @class = "OnlyEdit" })
-                                            @Html.TextBox("PullForceUnitText", Model.Detail.PullForceUnit, new { @readonly = "readonly" })
-                                        </h5>
+                                        @Html.DropDownListFor(o => o.Detail.PullForceUnit, Model.PullForceUnit_Source, null, new { @onchange = "PullForceUnitChange(this)", @disabled = "disabled", @readonly = "readonly" })
                                     </td>
                                     <td>
                                         @Html.TextBoxFor(o => o.Detail.PullForce, "", new { @onblur = "ResultCheck()", @class = "OnlyEdit", @readonly = "readonly", @type = "number", @step = "0.01" })
                                     </td>
-                                    <td><h5>Sec</h5></td>
                                     <td>
+                                        Sec
                                         @Html.TextBoxFor(o => o.Detail.Time, "", new { @onblur = "ResultCheck()", @class = "OnlyEdit", @readonly = "readonly", @type = "number" })
+                                    </td>
+                                    <td>Style Type</td>
+                                    <td>
+                                        @Html.DropDownListFor(o => o.Detail.StyleType, Model.StyleType_Source, null, new { @onchange = "StyleTypeChange(this)", @disabled = "disabled", @readonly = "readonly" })
                                     </td>
                                 </tr>
                                 <tr>
@@ -372,8 +371,8 @@
             $('#Save, #Undo, #New, #Picture').addClass("IsEditMode");
 
             if (EditType == "New") {
-                $(".DetailTable input:not(#ReportNoText,#Detail_LastEditName,#ResultText,#PullForceUnitText,#Detail_InspectorName), .DetailTable select:not(#Detail_Gender)").removeAttr("disabled");
-                $(".DetailTable input:not(#ReportNoText,#Detail_LastEditName,#ResultText,#PullForceUnitText,#Detail_InspectorName), .DetailTable select:not(#Detail_Gender)").removeAttr("readonly");
+                $(".DetailTable input:not(#ReportNoText,#Detail_LastEditName,#ResultText,#Detail_InspectorName), .DetailTable select:not(#Detail_Gender,#Detail_PullForceUnit,#Detail_StyleType)").removeAttr("disabled");
+                $(".DetailTable input:not(#ReportNoText,#Detail_LastEditName,#ResultText,#Detail_InspectorName), .DetailTable select:not(#Detail_Gender,#Detail_PullForceUnit,#Detail_StyleType)").removeAttr("readonly");
             }
             else {
                 $(".OnlyEdit").removeAttr("disabled").removeAttr("readonly");
@@ -418,7 +417,6 @@
         }
     }
 
-
     function Clear() {
        if (EditType == "New") {
            $(".DetailTable input[type='text'], .DetailTable select").val('');
@@ -456,9 +454,9 @@
             }
 
             //檢查TestDate, {PullForceUnit}, Sec, Fabric Ref#, Accessory Ref# 不可為空
-            if ($('#Detail_TestItem').val() == '' || $('#Detail_TestDate').val() == '' || $('#Detail_PullForceUnit').val() == '' || $('#Detail_Time').val() == ''
+            if ($('#Detail_TestItem').val() == '' || $('#Detail_TestDate').val() == '' || $('#Detail_Time').val() == ''
                 || $('#Detail_FabricRefno').val() == '' || $('#Detail_AccRefno').val() == ''
-                || $('#Detail_TestItem').val() == undefined|| $('#Detail_TestDate').val() == undefined || $('#Detail_PullForceUnit').val() == undefined || $('#Detail_Time').val() == undefined
+                || $('#Detail_TestItem').val() == undefined|| $('#Detail_TestDate').val() == undefined || $('#Detail_Time').val() == undefined
                 || $('#Detail_FabricRefno').val() == undefined || $('#Detail_AccRefno').val() == undefined) {
                 ErrMsg += "TestDate, Newton, Sec, Fabric Ref# and Accessory Ref# cannot be empty<br/>";
             }
@@ -514,15 +512,30 @@
             window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
 
-
         $('#SendMail').unbind('click').on('click', function () {
-
-            var para = "?To=";
-            para += "&CC=" + '@ViewBag.UserMail';
-            para += "&Subject=" + "Pulling Test – ReportNo:" + '@Model.Detail.ReportNo';
-            para += "&Body=" + "Attachment is Pulling Test– ReportNo:" + '@Model.Detail.ReportNo' + " detail data";
-
-            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+            $.ajax({
+                url: "@Url.Action("Report", "PullingTest", new { Area = "BulkFGT" })",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ReportNo: $('#Detail_ReportNo').val() }),
+                async: false,
+                success: function (data) {
+                    if (data.Result) {
+                        var para = "?To=";
+                        para += "&CC=" + '@ViewBag.UserMail';
+                        para += "&Subject=" + "Pulling Test – ReportNo:" + '@Model.Detail.ReportNo';
+                        para += "&Body=" + "Attachment is Pulling Test– ReportNo:" + '@Model.Detail.ReportNo' + " detail data";
+                        para += "&file=" + data.FileName;
+                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+                    }
+                    else {
+                        msg.WithError(data.ErrorMessage);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
         });
 
 
@@ -822,6 +835,8 @@
 
         blurEvent("Detail_");
         GenderChange($('#Detail_TestItem').val());
+        PullForceUnitChangeState($("#Detail_BrandID").val());
+        StyleTypeChangeState($("#Detail_BrandID").val(), $("#Detail_PullForceUnit").val());
     }
 
     function CheckSP(obj) {
@@ -849,8 +864,8 @@
                         $("#Detail_BrandID").val(res.BrandID);
                         $("#Detail_StyleID").val(res.StyleID);
                         $("#Detail_Article").val(res.Article);
-                        $("#Detail_PullForceUnit").val(res.PullForceUnit);
-                        $("#PullForceUnitText").val(res.PullForceUnit);
+                        //$("#Detail_PullForceUnit").val(res.PullForceUnit);
+                        //$("#PullForceUnitText").val(res.PullForceUnit);
 
                     }
                     else if (res.POID == '' || res.POID == null) {
@@ -859,8 +874,8 @@
                         $("#Detail_BrandID").val('');
                         $("#Detail_StyleID").val('');
                         $("#Detail_Article").val('');
-                        $("#Detail_PullForceUnit").val('');
-                        $("#PullForceUnitText").val('');
+                        //$("#Detail_PullForceUnit").val('');
+                        //$("#PullForceUnitText").val('');
 
                         msg.WithError('Cannot found SP# ' + poid + '.');
                     }
@@ -870,12 +885,14 @@
                         $("#Detail_BrandID").val('');
                         $("#Detail_StyleID").val('');
                         $("#Detail_Article").val('');
-                        $("#Detail_PullForceUnit").val('');
-                        $("#PullForceUnitText").val('');
+                        //$("#Detail_PullForceUnit").val('');
+                        //$("#PullForceUnitText").val('');
 
                         msg.WithError(res.Message);
                     }
 
+                    PullForceUnitChangeState($("#Detail_BrandID").val());
+                    StyleTypeChangeState($("#Detail_BrandID").val(), $("#Detail_PullForceUnit").val());
                 }
             });
         }
@@ -887,8 +904,8 @@
             $("#Detail_Result").val('');
             $("#ResultText").val('');
             $("#Detail_TestItem").val('');
-            $("#Detail_PullForceUnit").val('');
-            $("#PullForceUnitText").val('');
+            //$("#Detail_PullForceUnit").val('');
+            //$("#PullForceUnitText").val('');
             $(`#Detail_PullForce_Standard`).val('');
             $(`#Detail_Time_Standard`).val('');
             return;
@@ -912,7 +929,7 @@
         });
 
 
-        $.ajax({
+        @*$.ajax({
             url: "@Url.Action("GetPullUnit")",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
@@ -937,7 +954,7 @@
             error: function (xhr, ajaxOptions, thrownError) {
                 console.log(xhr.responseText);
             }
-        });
+        });*@
     }
 
     function ReloadDetail(obj) {
@@ -952,11 +969,12 @@
         var testitem = $(obj).val();
         var brand = $(`#${idPre}BrandID`).val();
         var pullForceUnit = $(`#${idPre}PullForceUnit`).val();
+        var styleType = $(`#${idPre}StyleType`).val();
         GenderChange(testitem);
         if (testitem != '' && brand != '' && pullForceUnit != '') {
             $.ajax({
                 url: '@Url.Action("GetStandard")',
-                data: { BrandID: brand, TestItem: testitem, PullForceUnit: pullForceUnit},
+                data: { BrandID: brand, TestItem: testitem, PullForceUnit: pullForceUnit, StyleType: styleType },
                 type: 'POST',
                 dataType: "json",
                 async: false,
@@ -994,12 +1012,44 @@
         }
     }
 
+    function PullForceUnitChange(obj) {
+        var idPre = 'Detail_';
+        var unit = $(obj).val();
+        var brand = $(`#${idPre}BrandID`).val();
+        StyleTypeChangeState(brand, unit);
+        TestItemChange($('#Detail_TestItem'));
+    }
+
+    function StyleTypeChange(obj) {
+        TestItemChange($('#Detail_TestItem'));
+    }
+
     function GenderChange(itemVal) {
         if (itemVal == "Buttons" || itemVal == "Snaps") {
             $('#Detail_Gender').removeAttr("disabled").removeAttr("readonly");
         }
         else {
             $('#Detail_Gender').val('').attr("disabled", "disabled").attr("readonly", "readonly");;
+        }
+    }
+
+    function PullForceUnitChangeState(itemVal) {
+        if (itemVal == "U.ARMOUR") {
+            $('#Detail_PullForceUnit').removeAttr("disabled").removeAttr("readonly");
+        }
+        else {
+            $('#Detail_PullForceUnit').val('Newton').attr("disabled", "disabled").attr("readonly", "readonly");;
+        }
+    }
+
+    function StyleTypeChangeState(brand, unit) {
+        if (brand == "U.ARMOUR" && unit == "IB") {
+            $("#Detail_StyleType option[value='']").remove();
+            $('#Detail_StyleType').val('Adults').removeAttr("disabled").removeAttr("readonly");
+        }
+        else {
+            $("#Detail_StyleType").prepend("<option value='' selected='selected'></option>");
+            $('#Detail_StyleType').val('').attr("disabled", "disabled").attr("readonly", "readonly");;
         }
     }
 
